actions/screenbrightnesscontrol: More robust against display changes

To avoid weird racy behavior in the case where an external monitor
may have been added prior to the internal display, we now always
limit the set of displays affected by profile state configuration
to internal displays.

This will make the "Change screen brightness" option disappear
from the Power Management KCM for systems without internal display.
No big loss for users of desktop PCs with only external monitors
and no batteries, their KCM is now tidier and Wayland users still
have brightness sliders available in the Display Configuration KCM
in addition to the Brightness and Color applet.

Also simplify conditions: the check for higher-than-min isn't needed,
so we don't have to duplicate it in the `displayAdded` handler.
`ScreenBrightnessController::setBrightness()` will already clamp
brightness to a value between min and max brightness.

Lastly, profile brightness is now also applied on `displayAdded`.
This will avoid future bugs in case we ever have more than one
internal display, one that might turn off and back on. (The case of
the first internal display appearing and disappearing is already
handled by `PowerDevil::Core` deleting the action if unsupported.)

BUG: 498771
CCBUG: 494956

(cherry picked from commit 5460428e2dd1d7bac01ccbad23f501161635bd35)